Rewrite FindInPageTest.SelectionRestoreOnTabSwitch to solve flakiness

As part of Test Code Health Rotation (go/test-health-rotation-instructions)

Bug: 792313
Change-Id: I38d4cc9eafbe84a0f07a8baa0af7b94b998a319d
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/4651206
Reviewed-by: Dana Fried <dfried@chromium.org>
Commit-Queue: Daniel d'Andrada <dandrader@google.com>
Cr-Commit-Position: refs/heads/main@{#1166469}