chrome/browser/ui/views/find_bar_host.h
@@ -139,6 +139,7 @@ class FindBarHost : public DropdownBarHost,
 
  private:
   friend class FindInPageTest;
+  friend class LegacyFindInPageTest;
 
   // Allows implementation to tweak widget position.
   void GetWidgetPositionNative(gfx::Rect* avoid_overlapping_rect);
